# lib_coin

./: .gitignore  CMakeLists.txt  README.md
include/: block.h  blockchain.h  serdes.h  transaction.h  utils.h  wallet.h
src/: block.cpp  blockchain.cpp  main.cpp  serdes.cpp  transaction.cpp  utils.cpp  wallet.cpp
